--- a/static/pillar-land.html
+++ b/static/pillar-land.html
@@ -12,48 +12,54 @@
         </style>
     </head>
 
-    <!---- ======= Navbar ======= ---->
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-transparent">
-        <div class="container">
-          <div class="row">
-              <div class="col-md-12"></div>
-          </div>
-          <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
-              <ul class="navbar-nav mx-auto">
-              <li class="nav-item px-3">
-                  <a class="nav-link" href="index.html">Our Solution</a>
-              </li>
-              <li class="nav-item dropdown px-3">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Pillars
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
-                <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
-                <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
-                <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
-                </ul>
-              </li>
-              <li class="nav-item"><a href="index.html" class="nav-link px-3 text-muted"><img src="images/logo.png" alt="Logo" style="height: 2rem;"></a></li>
-              <li class="nav-item px-3">
-                <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
-              </li>
-              <li class="nav-item px-3">
-                  <a class="nav-link" href="faq.html">FAQ</a>
-              </li>
+    <!-- top of landing page + parallax -->
+ <section style="background-image: url('images/landbackground.jpeg');" class="top-image">
+  <nav class="navbar navbar-expand-lg navbar-transparent">
+      <div class="container">
+        <div class="row">
+            <div class="col-md-12"></div>
+        </div>
+        <div class="collapse navbar-collapse justify-content-center text-center" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+            <li class="nav-item px-3">
+                <a class="nav-link" href="index.html">Our Solution</a>
+            </li>
+            <li class="nav-item dropdown px-3">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Pillars
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="pillar-land.html">Land</a></li>
+              <li><a class="dropdown-item" href="pillar-ocean.html">Ocean</a></li>
+              <li><a class="dropdown-item" href="pillar-construction.html">Construction</a></li>
+              <li><a class="dropdown-item" href="pillar-rock.html">Rock</a></li>
               </ul>
-          </div>
+            </li>
+            <li class="nav-item"><a href="index.html" class="nav-link px-3 text-muted"><img src="images/logo.png" alt="Logo" style="height: 2rem;"></a></li>
+            <li class="nav-item px-3">
+              <a class="nav-link" href="entrepreneurs.html">Entrepreneurs</a>
+            </li>
+            <li class="nav-item px-3">
+                <a class="nav-link" href="faq.html">FAQ</a>
+            </li>
+            </ul>
         </div>
-      </nav>
-        <!--  ------------------------------------ -->
-        <div class="jumbotron jumbotron-fluid" style="background-image: url(images/land-stored-bg.jpg); background-size: cover; background-position: center center; height: 50vh;">
-            <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 100%;">
-                <h1 class="display-1">Land-Stored Carbon</h1>
-                <p class="lead">Key for storing carbon dioxide</p>
-            </div>
-        </div>
-        <div class="divider"></div>
+      </div>
+    </nav>
+  
+  <div class="container d-flex flex-column justify-content-center align-items-center text-center" style="height: 80%;">
+      <h1 class="display-1 title">Land Stored Carbon</h1>
+      <!-- <p class="lead">Maybe the future isn't all smokestacks and screens?</p> -->
+  </div>
+
+
+  <div class="waveTrans" id="waveTrans1" style="--i:1; background-image: url(images/wave.png);"></div>
+  <div class="waveTrans" id=waveTrans2 style="--i:2; background-image: url(images/wave.png);"></div>
+  <div class="waveTrans" id=waveTrans3 style="--i:3; background-image: url(images/wave.png);"></div>
+  <div class="waveTrans" id=waveTrans4 style="--i:4; background-image: url(images/wave.png);"></div>
+</section>
+
+
 
         <!-- Entrepreneur highlight -->
         <div class="container col-xxl-8 px-4 py-5">
@@ -73,6 +79,17 @@
             </div>
         </div>
         <div class="divider"></div>
+
+
+
+        <!-- ======= about pillar ======= -->
+        <div class="p-5 text-center bg-body-tertiary rounded-3">
+          <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
+          <h1 class="text-body-emphasis">What are nature based solutions?</h1>
+          <p class="col-lg-8 mx-auto fs-5 text-muted">
+              Nature based solutions (or NBS) are actions to <strong>protect, sustainably manage and restore</strong> both natural ecosystems and modified ecosystems. Addressing societal challenges effectively and adaptively, simultaneously <strong>benefiting people and nature.</strong>
+          </p>
+      </div>
 
 
 <!-- ======= facts and figures ======= -->
@@ -182,5 +199,6 @@
       </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    </body>
+        <script src="templates/landing.js"></script>
+      </body>
 </html>
