--- a/static/entrepreneurs.html
+++ b/static/entrepreneurs.html
@@ -5,6 +5,7 @@
         <title>Entrepreneurs</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">       
         <link rel="stylesheet" href="templates/style.css"> 
+        <link rel="icon" href="images/logo.svg">
         <style>
             .nav-item{
                 font-size: 1.5rem;
