--- a/static/pillar-ocean.html
+++ b/static/pillar-ocean.html
@@ -2,12 +2,19 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Rock-stored carbon</title>
+        <title>Ocean-stored carbon</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">  
-        <link rel="stylesheet" href="templates/style.css">      
+        <link rel="stylesheet" href="templates/style.css">   
+        <link rel="icon" href="images/logo.svg">   
         <style>
             .nav-item{
                 font-size: 1.5rem;
+            }
+            .facts .card-icon i {
+              background-color: #7fbadc;
+            }
+            .section-bg {
+              background-color: #17646512;
             }
         </style>
     </head>
@@ -64,7 +71,7 @@
         <div class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/entrepreneurs/george_birch.jpg" class="d-block mx-lg-auto img-fluid" alt="ADD ALT TEXT" width="700" height="500" loading="lazy">
+                <img src="images/entrepreneurs/george_birch.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="George Birch" width="700" height="500" loading="lazy">
               </div>
               <div class="col-lg-6">
                 <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
@@ -72,8 +79,9 @@
                 <p></p>
                 <p class="lead">Partnering with local fishermen, they offer new income opportunities and cost-effective restoration at €0.25 per oyster, funding sustainable ocean restoration projects.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                  <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read More</button>
-                  <button type="button" class="btn btn-outline-secondary btn-lg px-4">See other stories</button>
+                  <a href="entrepreneurs.html">
+                    <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read other stories</button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -83,10 +91,12 @@
 
 <!-- ======= about pillar ======= -->
         <div class="p-5 text-center bg-body-tertiary rounded-3">
-          <img width="100" height="100" style="margin-bottom: 20px;" src="images/logo.png"></img>
-          <h1 class="text-body-emphasis">What are nature based solutions?</h1>
+          <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-water" viewBox="0 0 16 16">
+            <path d="M.036 3.314a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 3.964a.5.5 0 0 1-.278-.65m0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 6.964a.5.5 0 0 1-.278-.65m0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0L.314 9.964a.5.5 0 0 1-.278-.65m0 3a.5.5 0 0 1 .65-.278l1.757.703a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.014-.406a2.5 2.5 0 0 1 1.857 0l1.015.406a1.5 1.5 0 0 0 1.114 0l1.757-.703a.5.5 0 1 1 .372.928l-1.758.703a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.014-.406a1.5 1.5 0 0 0-1.114 0l-1.015.406a2.5 2.5 0 0 1-1.857 0l-1.757-.703a.5.5 0 0 1-.278-.65"/>
+          </svg>
+          <h1 class="text-body-emphasis">Ocean-stored carbon</h1>
           <p class="col-lg-8 mx-auto fs-5 text-muted">
-              Nature based solutions (or NBS) are actions to <strong>protect, sustainably manage and restore</strong> both natural ecosystems and modified ecosystems. Addressing societal challenges effectively and adaptively, simultaneously <strong>benefiting people and nature.</strong>
+            Our oceans are a significant sink for anthropogenic carbon, absorbing roughly a <strong>third of human CO2</strong> emitted over the industrial period. Harnessing it to capture and store more carbon through nature based solutions like growing kelp to capture carbon, or seaweed to aid a plant-based diet is a key part of the solution.
           </p>
       </div>
 
@@ -147,68 +157,27 @@
     </div>
   </section>
 
-
-        <!-- Quiz -->
-        <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-            <h1 class="display-5 fw-bold lh-1 mb-3">Quiz</h1>
-            <form>
-                <div class="mb-3">
-                    <h5>Question 1:</h5>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option1" value="option1">
-                        <label class="form-check-label" for="option1">
-                            Option 1
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option2" value="option2">
-                        <label class="form-check-label" for="option2">
-                            Option 2
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option3" value="option3">
-                        <label class="form-check-label" for="option3">
-                            Option 3
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="question1" id="option4" value="option4">
-                        <label class="form-check-label" for="option4">
-                            Option 4
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+  <!-- Entrepreneur highlight -->
+  <div class="container col-xxl-8 px-4 py-5">
+    <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="images/entrepreneurs/squarealex.jpg" class="d-block mx-lg-auto img-fluid rounded-4" alt="Alexander Ebbing" width="500" height="500" loading="lazy">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Entrepreneur Highlight</h1>
+        <p class="lead">Arbon Earth combats climate change by combining kelp and bamboo to maximize carbon sequestration. They have developed floating Oceanpods made from bamboo and biodegradable ropes, allowing kelp to grow and create micro-ecosystems that enhance biodiversity through Integrated Multi-Trophic Aquaculture (IMTA). These Oceanpods, deployed offshore in the Atlantic, support marine life and, once mature, the algae sinks to the seabed, sequestering carbon for thousands of years. Arbon Earth conducts fundamental research on ecosystem impacts and scaling logistics to enhance their method's effectiveness.</p>
+        <p></p>
+        <p class="lead"> Founded by Magnus Willner and Carl Lindberg, Arbon Earth collaborates with scientists and companies to scale their innovative carbon removal technique, aiming to significantly mitigate climate change.</p>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+          <a href="entrepreneurs.html">
+            <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Read other stories</button>
+          </a>
         </div>
-        <div class="divider"></div>
-
-
-        <!-- Alternatives -->
-        <div class="container">
-            <p class="display-3">Alternatives</p>
-            <div class="row">
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 1</h2>
-                  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 2</h2>
-                  <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-                <div class="col-lg-4">
-                  <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect></svg>
-                  <h2 class="fw-normal">Alternative 3</h2>
-                  <p>And lastly this, the third column of representative placeholder content.</p>
-                  <p><a class="btn btn-secondary" href="#">View details »</a></p>
-                </div><!-- /.col-lg-4 -->
-            </div>
-        </div>
+      </div>
+    </div>
+  </div>
+  <div class="divider"></div>
+       
     
           <!--  ---------------- Footer -------------------- -->
           <div class="container">
